src/test/ui/rfc-0107-bind-by-move-pattern-guards/feature-gate.no_gate.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0008]: cannot bind by-move into a pattern guard
  --> $DIR/feature-gate.rs:28:16
   |
LL |         A { a: v } if *v == 42 => v,
   |                ^ moves value into pattern guard
   |
   = help: add `#![feature(bind_by_move_pattern_guards)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0008`.
=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
